Alignment and Rendering Fixes

--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -4,14 +4,16 @@ raiseText()
 	-moz-text-shadow: -1px 1px 0 white
 	-webkit-text-shadow: -1px 1px 0 white
 	//font-family:"Times New Roman", Times, serif//
-
+	
 h1 { font-family: "Brush Script MT", cursive; text-align: center; color:white;  color: white;
     text-shadow:
     -1px -1px 0 #C0C0C0,
     1px -1px 0 #C0C0C0,
     -1px 1px 0 #C0C0C0,
     1px 1px 0 #C0C0C0;}
+	
 h2 { text-align: center }
+
 body 
 
 	height  100%
@@ -59,13 +61,9 @@ body
 	margin 40px auto
 .modal-form-errors li
 	raiseText()
+	color #D8000C
 
 // Member info forms //
-<<<<<<< HEAD
-
-#member-form
-=======
->>>>>>> e64f4e643f3418cdf4536c422d4cc4550b26a93c
 	
 #info-form-container
 	overflow-y: hidden
@@ -75,16 +73,17 @@ body
 	width 280px
 .modal-form-errors li
 	raiseText()
-<<<<<<< HEAD
+	color #D8000C
 	
 #address-form-container
+	overflow-y: hidden
 	width 340px
 	margin 40px auto
+#state-list
+	width 280px
 .modal-form-errors li
 	raiseText()
-=======
 	color #D8000C
->>>>>>> e64f4e643f3418cdf4536c422d4cc4550b26a93c
 
 #deposit-form-container
 	width 340px
@@ -108,7 +107,6 @@ body
 	padding-bottom: 1000px
 }
 #info-scrollpoint{
-<<<<<<< HEAD
 	padding-top: 0px
 	padding-bottom: 0px
 }
@@ -128,12 +126,9 @@ body
 	padding-top: 50px
 	padding-bottom: 0px
 }
-
 #review-scrollpoint{
 	padding-top: 0 px
 	padding-bottom: 600px
-=======
-	padding-top: 5px
 }
 #deposit-scrollpoint{
 	padding-top: 100px
@@ -143,8 +138,8 @@ body
 }
 #signature-scrollpoint{
 	padding-top: 100px
->>>>>>> e64f4e643f3418cdf4536c422d4cc4550b26a93c
 }
+
 // retrieve password window //
 
 .modal-single-input{
@@ -186,13 +181,17 @@ body
 	width 200px
 	
 #button-container {
-  height 2%;
-  margin-left:0px;
+	//height 2%;
+	width 550px 
+	//padding 0px 0px 0px 0px
+	float center
+	//margin-top 15px
 }	
 
 
 	 
 // support pages //
+
 
 #print
 	padding 20px
